<resources>
    <string name="app_name">EcommerceServer</string>
    <string name="chives_server">Chives Server</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="phone_number">Enter Phone Number</string>
    <string name="password">Enter Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="new_user_register">Register new user</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="avneesh">avneesh</string>
    <string name="welcome">welcome</string>
    <string name="sign_out">Sign Out</string>
    <string name="orders">Orders</string>
    <string name="cart">Cart</string>
    <string name="menu">Menu</string>
    <string name="new_user_registeration">New User Registration</string>
    <string name="user_name">Enter Name</string>
    <string name="signin">Register</string>
    <string name="enter_food_name">Hara</string>
    <string name="food_name">Enter Food Name</string>
    <string name="food_desc">Enter Food Description</string>
    <string name="food_price">Enter Food Price</string>
    <string name="food_image">Browse Food Image</string>

    <string name="_1234">1234</string>
    <string name="select">SELECT</string>
    <string name="Upload_Image">Upload Image</string>
    <string name="add_food">Add Food</string>
    <string name="_11111">111</string>
    <string name="status">order status</string>
    <string name="_1234567890">123456789</string>
    <string name="address">address</string>
    <string name="order_name">Order Name</string>
    <string name="total">$100</string>
    <string name="Product_name">Product Name</string>
    <string name="Product_quantity">Product Quantity</string>
    <string name="Product_price">Product Price</string>
    <string name="comment">Comment</string>
    <string name="title_activity_tracking_order">TrackingOrder</string>
    <string name="progress">Progress</string>
    <string name="update_food">Update Food</string>
    <string name="delete_food">Delete Food</string>
    <string name="update_res_info">Restaurant Info</string>
    <string name="discout_food">Add Discount</string>
    <string name="enter_fod_name">Enter Food Name</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="detail">Detail</string>
    <string name="direction">Direction</string>
    <string name="banner">Banner</string>
    <string name="name_of_banner">Name Of Banner</string>
    <string name="food_id">food_id</string>
    <string name="Food_name">Food Name</string>
    <string name="add_banner">Add Banner</string>
    <string name="image_selected">Image Selected!</string>
    <string name="order_date">Order Date</string>

</resources>
