<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addnewfoodlayout"
   android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/edt_food_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/food_name"
        android:inputType="text"
        android:maxLength="20"
        android:maxLines="1"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="83dp" />

    <EditText
        android:id="@+id/edt_food_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/food_desc"
        android:inputType="text"
        android:maxLength="20"
        android:maxLines="1"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="164dp" />

    <EditText
        android:id="@+id/edt_food_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/food_price"
        android:inputType="text"
        android:maxLength="20"
        android:maxLines="1"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="245dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/button_color"
            android:text="@string/Upload_Image"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_color"
            android:text="@string/add_food"
            tools:ignore="MissingConstraints" />


    </LinearLayout>



</LinearLayout>