<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.avneeshjaiswal.ecommerceserver.Activity.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <Button
        android:id="@+id/add_food"
        android:layout_width="74dp"
        android:layout_height="75dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/add_icon"
        android:paddingTop="60sp"
        android:text="@string/add_food"
        android:textColor="#000000" />

    <Button
        android:layout_width="74dp"
        android:layout_height="75dp"
        android:layout_marginTop="260dp"
        android:id="@+id/res_info"
        android:layout_marginStart="200dp"
        android:background="@drawable/restaurant"
        android:paddingTop="40sp"
        android:textSize="12sp"
        android:text="@string/update_res_info"
        android:textColor="#000000" />

    <Button
        android:id="@+id/maintain_order"
        android:layout_width="74dp"
        android:layout_height="75dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/order"
        android:paddingTop="20sp"
        android:text="@string/orders"
        android:textColor="#000000"
        android:textSize="12sp" />

    <Button
        android:id="@+id/discount"
        android:layout_width="74dp"
        android:layout_height="76dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="260dp"
        android:background="@drawable/discount"
        android:paddingTop="60sp"
        android:text="@string/discout_food"
        android:textColor="#000000"
        android:textSize="12sp" />

    <Button
        android:id="@+id/banner"
        android:layout_width="74dp"
        android:layout_height="76dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="380dp"
        android:background="@drawable/ic_laptop_black_24dp"
        android:paddingTop="60sp"
        android:text="@string/banner"
        android:textColor="#000000"
        android:textSize="12sp" />




</android.support.design.widget.CoordinatorLayout>
