<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.avneeshjaiswal.ecommerceserver.Activity.Splash">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="152dp"
        android:gravity="center"
        android:paddingTop="40sp"
        android:text="@string/chives_server"
        android:textColor="@color/colorAccent"
        android:textSize="40sp"
        android:textStyle="italic|bold" />

    <info.hoang8f.widget.FButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="18dp"
        android:text="@string/login"
        android:id="@+id/login" />


    <info.hoang8f.widget.FButton
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="25dp"
        android:text="@string/register" />


</RelativeLayout>
