<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bannerlayout"
    >

    <EditText
        android:id="@+id/edt_food_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="119dp"
        android:hint="@string/food_id"
        android:inputType="text"
        android:maxLength="20"
        android:maxLines="1"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="83dp" />

    <EditText
        android:id="@+id/edtfoodname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="241dp"
        android:hint="@string/Food_name"
        android:inputType="text"
        android:maxLength="20"
        android:maxLines="1"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="164dp" />


    <Button
        android:id="@+id/btn_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="start"
        android:layout_marginBottom="157dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/Upload_Image"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="313dp" />

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="start"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/add_banner"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="134dp"
        tools:layout_editor_absoluteY="375dp" />


</RelativeLayout>