<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background_2"
    android:layout_height="match_parent"
    tools:context="com.example.avneeshjaiswal.ecommerceserver.Activity.Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_user_registeration"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:paddingTop="20sp"
            android:gravity="center"
            android:textStyle="bold"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:paddingTop="50dp">

            <EditText
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/edt_phone"
                android:hint="@string/phone_number"
                android:textColorHint="@color/forget_passowrd"
                android:inputType="number"
                android:maxLines="1"
                android:gravity="center"
                android:textColor="@color/forget_passowrd"
                android:textAlignment="center"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white">

            <EditText
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/edt_name"
                android:hint="@string/user_name"
                android:textColorHint="@color/white"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:gravity="center"
                android:textColor="@color/white"
                android:textAlignment="center"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white">

            <EditText
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/edt_pass"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                android:inputType="textPassword"
                android:maxLines="1"
                android:gravity="center"
                android:textColor="@color/white"
                android:textAlignment="center"
                />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signUp"
            android:text="@string/signin"
            />


    </LinearLayout>

</RelativeLayout>
